Project restaurant_management_system {
  database_type: 'PostgreSQL'
  Note: 'Restaurant management schema'
}

Table staff {
  id integer [primary key, increment]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  role varchar(30) [not null]
  email varchar(100) [unique]
  phone varchar(20)
  created_at timestamp
  updated_at timestamp
}

Table restaurant_tables {
  id integer [primary key, increment]
  table_number varchar(10)
  capacity integer [not null]
  location varchar(50)
  status varchar(20)
  created_at timestamp
  updated_at timestamp
}



// Relationships
Ref: orders.table_id > restaurant_tables.id
Ref: orders.staff_id > staff.id
Ref: order_items.order_id > orders.id
Ref: order_items.menu_item_id > menu_items.id
